src/test/ui/unique-object-noncopyable.stderr
error[E0599]: no method named `clone` found for struct `std::boxed::Box<dyn Foo>` in the current scope
  --> $DIR/unique-object-noncopyable.rs:24:16
   |
LL | trait Foo {
   | ---------
   | |
   | the method `clone` exists but this trait doesn't satisfy the bound `dyn Foo: std::clone::Clone`
   | the method `clone` exists but this trait doesn't satisfy the bound `dyn Foo: std::marker::Sized`
...
LL |     let _z = y.clone();
   |                ^^^^^ method not found in `std::boxed::Box<dyn Foo>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `std::clone::Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
